@@ -552,6 +552,11 @@ public abstract class AbstractType<T> implements Comparator<ByteBuffer>, Assignm
         return unwrap() instanceof org.apache.cassandra.db.marshal.NumberType;
     }
 
+    public boolean isString()
+    {
+        return unwrap() instanceof org.apache.cassandra.db.marshal.StringType;
+    }
+
     // This assumes that no empty values are passed
     public void writeValue(ByteBuffer value, DataOutputPlus out) throws IOException
     {
