@@ -1,4 +1,5 @@
 5.1
+ * Add JSON constraint (CASSANDRA-20273)
  * Prevent invalid constraint combinations (CASSANDRA-20330)
  * Support CREATE TABLE LIKE WITH INDEXES (CASSANDRA-19965)
  * Invalidate relevant prepared statements on every change to TableMetadata (CASSANDRA-20318)
